<resources>
    <string name="app_name">Adventure Manager</string>
    <!--Labels-->
    <string name="label_attack">Attack:</string>
    <string name="login_label">Login</string>
    <string name="label_hp_hint">hit points</string>
    <string name="userName_label">Username</string>
    <string name="password_label">Password</string>
    <string name="NoChars_label">No characters available.</string>
    <string name="PlaceHolder_label">.....Place holder.....</string>
    <string name="label_short_placeHolder">..0x0..</string>
    <string name="name_label">Name: </string>
    <string name="surName_label">Surname: </string>
    <string name="Race_label">Race: </string>
    <string name="Occupation_label">Occupation: </string>
    <string name="label_str">STR</string>
    <string name="label_dex">DEX</string>
    <string name="label_con">CON</string>
    <string name="label_int">INT</string>
    <string name="label_wis">WIS</string>
    <string name="label_cha">CHA</string>
    <string name="label_inventory">Inventory: </string>
    <string name="label_equipment">Equipment: </string>
    <string name="label_hp">HP: </string>
    <string name="label_mana">Mana: </string>
    <string name="label_ac">AC: </string>
    <string name="label_item_name">Item Name</string>
    <string name="label_item_type">Type: </string>
    <string name="label_item_hitdie">Hitdie: </string>
    <string name="label_item_ac">AC: </string>




    <!--Titles-->
    <string name="New_character_title">Create new character</string>
    <string name="title_Character_Details">Character details</string>
    <!--Buttons-->
    <string name="submit_button">Submit</string>
    <string name="choose_button">Choose</string>
    <string name="delete_button">Delete</string>
    <string name="addNewChar_button">Add New Character</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="button_Manage">Manage..</string>
    <string name="button_AddNewItem">Add New Item</string>


    <!--Errors-->
    <string name="username_error">Error - Username invalid</string>
    <string name="password_error">Error - Password invalid</string>
    <string name="login_error">Error - Username/Password incorrect</string>
    <!--AutoGen-->
    <string name="title_activity_main">Adventure Manager</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appbar_scrolling_view_behavior">test</string>
    <string name="label_mana_hint">mana</string>
    <string name="label_hitdie">Hit die:</string>
    <string name="label_roll_dice">Roll dice:</string>
    <string name="label_log">Log:</string>
    <string name="label_d0">d0</string>
    <string name="label_zero">0</string>
    <string name="label_six">6</string>
    <string name="label_d">d</string>
    <string name="label_non">----</string>

</resources>
