<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_item_name"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/itemInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_item_type"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_item_hitdie"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_item_ac"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:id="@+id/item_type_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceHolder_label"/>
            <TextView
                android:id="@+id/item_hitdie_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceHolder_label"/>
            <TextView
                android:id="@+id/item_ac_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlaceHolder_label"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>