<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.digitalpanandpaper.www.digitalpanandpaper_adventuremanager.CharacterViewActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_Character_Details"
            android:gravity="center|top"
            android:textSize="30sp"
            android:layout_weight="0.2"
            />
        <TextView
            android:id="@+id/charName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:gravity="center|top"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="0.2"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

        </ScrollView>
        <!--Add Content!-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/backButtonCharView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:layout_weight="2"
                android:layout_gravity="bottom"/>
            <Button
                android:id="@+id/saveButtonCharView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:layout_weight="1"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
