<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/characterDetailsLayoutName"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin_left"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/basic_margin_left"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Race_label"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/raceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin_left"
        android:layout_marginBottom="5sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Occupation_label"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/occupationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin_left"
        android:layout_marginBottom="5sp"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/basic_margin_left"
                android:layout_marginStart="@dimen/basic_margin_left"
                android:text="@string/label_hp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/hpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_short_placeHolder"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mana"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/manaView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_short_placeHolder"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ac"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/acView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_short_placeHolder"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin_left"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_str"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/strView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/str2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dex"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/dexView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/dex2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_con"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/conView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/cons2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_int"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/intView"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/int2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_wis"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/wisView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/wis2"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cha"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/chaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PlaceHolder_label"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/basic_margin_left"
            android:layout_marginStart="@dimen/basic_margin_left"
            android:src="@drawable/cha2"/>
    </LinearLayout>
</LinearLayout>